--- a/client/styles.scss
+++ b/client/styles.scss
@@ -1,111 +1,199 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
 
 $neutral: #e2e0e0;
 $lightneutral: #ececec;
 $bright: #af3735;
 $accentwarm: #ec775f;
 $accentcool: #95c4c2;
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background-color: $neutral;
+  background-color: $lightneutral;
+  background-repeat: no-repeat;
+  background-image: url(https://images.pexels.com/photos/1640774/pexels-photo-1640774.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-position: 0in;
 }
 
 /*
 LOGIN PAGE
 */
 .login {
-  h3{
-    font-family:'Libre Franklin', sans-serif;
+  h3 {
+    font-family: "Libre Franklin", sans-serif;
     font-weight: 100;
     color: rgb(68, 68, 68);
   }
-  h5{
-    font-family: 'M PLUS 1p', sans-serif;
-    color: rgb(80,80,80);
+  h5 {
+    font-family: "M PLUS 1p", sans-serif;
+    color: rgb(80, 80, 80);
+    padding-top: 20px;
   }
 
   margin: 50px;
   text-align: center;
   padding-top: 40px;
-  background-color: $lightneutral;
+  background-color: white;
   border-radius: 10px;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   width: 400px;
   form {
-    padding:  50px 30px;
-    display:  flex;
-    flex-direction:  column;
-    align-items:  flex-start;
-    padding-bottom:  20px;
-    width:  300px;
+    padding: 50px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 20px;
+    width: 300px;
   }
   label {
-    font-size:  12.5px;
-    color:  #000;
-    opacity:  .8;
-    font-weight:  400;
+    font-size: 12.5px;
+    color: #000;
+    opacity: 0.8;
+    font-weight: 400;
   }
-  input{
-    font-size:  18px;
-    padding:  20px 0px;
-    height:  56px;
-    border:  none;
-    border-bottom:  solid 1px rgba(0,0,0,.1);
-    background: $lightneutral;
-    width:  320px;
-    box-sizing:  border-box;
-    transition:  all .3s linear;
-    color:  #000;
-    font-weight:  400;
+  input {
+    font-size: 18px;
+    padding: 20px 0px;
+    height: 56px;
+    border: none;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+    background: white;
+    width: 320px;
+    box-sizing: border-box;
+    transition: all 0.3s linear;
+    color: #000;
+    font-weight: 400;
     &:focus {
-      border-bottom:  solid 2px $accentcool;
+      border-bottom: solid 2px $accentcool;
       outline: 0;
-      box-shadow:  0 2px 6px -8px rgba($bright, .45);
+      box-shadow: 0 2px 6px -8px rgba($bright, 0.45);
     }
   }
   button {
-    -webkit-appearance:  none;
-    width:  auto;
-    min-width:  100px;
-    border-radius:  24px;
-    text-align:  center;
-    padding:  15px 40px;
-    margin-top:  5px;
+    -webkit-appearance: none;
+
+    width: auto;
+    min-width: 100px;
+    border-radius: 24px;
+    text-align: center;
+    padding: 15px 40px;
+    margin-top: 5px;
     background-color: $bright;
-    color:  #fff;
-    font-size:  14px;
-    margin-left:  auto;
-    font-weight:  500;
-    box-shadow:  0px 2px 6px -1px rgba(0,0,0,.13);
-    border:  none;
-    transition:  all .3s ease;
+    color: #fff;
+    font-size: 14px;
+    margin-left: auto;
+    font-weight: 500;
+    box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.13);
+    border: none;
+
+    transition: all 0.3s ease;
     outline: 0;
     &:hover {
-      transform:  translateY(-3px);
-      box-shadow:  0 2px 6px -1px rgba($bright, .65);
+      transform: translateY(-3px);
+      box-shadow: 0 2px 6px -1px rgba($bright, 0.65);
       &:active {
-        transform:  scale(.99);
+        transform: scale(0.99);
       }
     }
   }
 }
 
 // Header and Footer
-.header{
-  h1 {
-    font-family: 'Libre Franklin', sans-serif;
-    font-weight: 200;
-  }
+// .header {
+//   h1 {
+//     font-family: "Libre Franklin", sans-serif;
+//     font-weight: 200;
+//   }
+//   display: inline-flex;
+//   font-family: "M PLUS 1p", sans-serif;
+//   background-color: $accentcool;
+//   width: 100%;
+
+//   top: 0;
+// }
+.footer {
   display: inline-flex;
-  font-family: 'M PLUS 1p', sans-serif;
-  background-color: $accentcool;
-  width: 100%;
-}
-.footer{
-  display: inline-flex;
-  font-family: 'M PLUS 1p', sans-serif;
+  font-family: "Open Sans Regular";
   color: rgb(101, 101, 101);
-  background-color: $accentcool;
+  background-color: #fcf7f7;
   width: 100%;
-  position: absolute;
+  position: fixed;
   bottom: 0;
+  height: 70px;
+}
+
+/* HEADER */
+.header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: #fcf7f7;
+  max-height: 70px;
+
+  font-family: "Open Sans";
+}
+
+.logo {
+  width: 20%;
+  height: auto;
+  padding-top: 15px;
+}
+
+/* FOOTER - BUTTON */
+
+.ft-btn {
+  letter-spacing: 0;
+}
+
+.ft-btn:hover,
+.ft-btn:active {
+  letter-spacing: 5px;
+}
+
+.ft-btn:after,
+.ft-btn:before {
+  backface-visibility: hidden;
+  border: 1px solid rgba(#e1332c, 0);
+  bottom: 0px;
+  content: " ";
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  transition: all 280ms ease-in-out;
+  width: 0;
+}
+
+.ft-btn:hover:after,
+.ft-btn:hover:before {
+  backface-visibility: hidden;
+  border-color: #e1332c;
+  transition: width 350ms ease-in-out;
+  width: 80%;
+}
+
+.ft-btn:hover:before {
+  bottom: auto;
+  top: 0;
+  width: 80%;
+}
+
+/* NAVBAR */
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+
+  text-align: center;
+}
+ul {
+  padding: 1rem 1rem 4rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  color: #1e1c1c;
+  min-width: 80px;
+  margin: auto;
 }
