--- a/client/styles.scss
+++ b/client/styles.scss
@@ -218,7 +218,7 @@ USER PAGE
 
 .postContainer {
   margin-left: 20px;
-  margin-top: 40px;
+  margin-top: 20px;
   display: inline-flex;
   flex-wrap: wrap;
 
@@ -280,8 +280,9 @@ USER PAGE
   justify-content: center;
   align-items: center;
   margin-left: 50px;
-  width: 250px;
-  height: 400px;
+  margin-top: 14px;
+  width: 280px;
+  height: 300px;
   background-color: rgb(246, 246, 246);
   display: block;
   font-family: Helvetica;
@@ -291,6 +292,7 @@ USER PAGE
 
 .form{
   display: block;
+  padding: 15px;
   margin-left: 4px;
   input{
     border-radius: 10px;
